# github-wiki-page-index

./: .gitignore  Dockerfile  README.md  action.yaml  entrypoint.sh  generate_wiki_file_index.py  generate_wiki_page_index.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yaml
Docker_Support/: Dockerfile  entrypoint.sh
GitHub_Action_Support/: entrypoint.sh
githubwikipageindex/: __init__.py
src/: Dockerfile  entrypoint.sh
src/github_wiki_page_index/: generate_wiki_page_index.py
src/githubwikipageindex/: __init__.py  generate_wiki_page_index.py
tests/: test_unit_tests.py
