[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "github-wiki-page-index"
version = "0.1.0"
description = 'Creates an index based on tags for GitHub Wiki pages.'
readme = 'README.md'
authors = [
    { name = "Paul Suh", email = "paul@mspex.net" }
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki"
]
dependencies = []
requires-python = ">=3.8"
# dynamic = ['version']

[project.optional-dependencies]
precommit = [
    "ruff"
]
unittest = [
    "coverage[toml]>=6.5",
    "pytest",
    "pytest-cov"
]

[project.urls]
"Source code" = "https://github.com/paulsuh/githubwikipageindex"

[tool.coverage.run]
source_pkgs = ["src"]
branch = true
parallel = true
omit = [
  "src/github_wiki_page_index/__about__.py",
]

[tool.coverage.paths]
src = ["src"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "def _setup():"
]

[tool.ruff.per-file-ignores]
# Ignore `E402` (import violations) and `F401` (unused imports) in all
# `__init__.py` files
"__init__.py" = ["E402", "F401"]
