[metadata]
name = githubwikipageindex
version = 0.2.0
author = Paul Suh
author_email = paul@mspex.net
description = Build a page index for a GitHub Wiki
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paulsuh/githubwikipageindex
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki

[options]
package_dir =
    = src
packages =
    githubwikipageindex
python_requires = >=3.8
